# log

./: Dockerfile  README.md  docker-compose.yml  logs.py  main.py  requirements.txt  weird_shit  wu
cogs/: __init__.py  commands.py  listeners.py  logcommands.py  management.py  util.py
config/: requirements.txt
cpp/: CMakeLists.txt  main.cpp
log_cogs/: __init__.py  listeners.py  logcommands.py  management.py  util.py
